--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.1.1",
     "@mui/material": "^7.1.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "cookies-next": "^6.0.0",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.18",
     "yup": "^1.6.1"
   },
